--- a/UtkarshsBookStore/appsettings.json
+++ b/UtkarshsBookStore/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UtkarshsBookStore-024DB459-734E-456E-9BBF-0C9FF03620DE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=UtkarshsBookStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UtkarshsBookStore-024DB459-734E-456E-9BBF-0C9FF03620DE;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
