Change the code in the Project.....

--- a/UtkarshsBookStore/UtkarshsBookStore.csproj
+++ b/UtkarshsBookStore/UtkarshsBookStore.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\UtkarshsBooks.Utility\UtkarshsBooks.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
